[gd_scene load_steps=8 format=3 uid="uid://bxpmp04xt6u6q"]

[ext_resource type="Script" uid="uid://dlfvsvr14xljp" path="res://scripts/tablet_manager.gd" id="1_0wb5n"]
[ext_resource type="PackedScene" uid="uid://dbeb63a1g0ep4" path="res://scenes/props/app_button.tscn" id="2_h2de0"]
[ext_resource type="Texture2D" uid="uid://duvbu0ep0tb3l" path="res://textures/cheesenaf 2 tablet home.png" id="2_pge4p"]
[ext_resource type="Texture2D" uid="uid://cwmvvjrnwa0ex" path="res://textures/apps/background.jpg" id="4_jhf2s"]
[ext_resource type="PackedScene" uid="uid://bajdsp8qkrv1l" path="res://scenes/props/call.tscn" id="5_h5xad"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3kpga"]
atlas = ExtResource("2_pge4p")
region = Rect2(0, 0, 1280, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_82o56"]
atlas = ExtResource("2_pge4p")
region = Rect2(0, 40, 1280, 760)

[node name="TabletOS" type="Node2D"]
script = ExtResource("1_0wb5n")
app_button = ExtResource("2_h2de0")

[node name="TimeUI" type="Control" parent="."]
z_index = 5
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 800.0

[node name="TopBarBackground" type="Sprite2D" parent="TimeUI"]
z_index = 5
texture = SubResource("AtlasTexture_3kpga")
centered = false

[node name="Clock" type="Label" parent="TimeUI"]
z_index = 5
layout_mode = 0
offset_left = 1192.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 32.0
text = "12:00 AM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 800.0

[node name="Background" type="Sprite2D" parent="Home"]
z_index = -1
position = Vector2(-10, -69)
scale = Vector2(0.327667, 0.327667)
texture = ExtResource("4_jhf2s")
centered = false

[node name="Shadow" type="Sprite2D" parent="Home"]
z_index = -1
position = Vector2(0, 40)
texture = SubResource("AtlasTexture_82o56")
centered = false

[node name="GridContainer" type="GridContainer" parent="Home"]
layout_mode = 0
offset_left = 80.0
offset_top = 96.0
offset_right = 1200.0
offset_bottom = 744.0
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 56
columns = 6

[node name="Application" type="Node2D" parent="."]

[node name="CallService" parent="." instance=ExtResource("5_h5xad")]
offset_right = 1280.0
offset_bottom = 800.0
metadata/_edit_lock_ = true

[node name="MediaPlayer" type="AudioStreamPlayer" parent="."]
